@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-01T02:23:47Z",
+  "timestamp" : "2022-06-01T08:33:49Z",
   "count_outdated" : 492,
   "uniques_outdated" : 276,
   "count" : 535,
-  "uniques" : 303,
+  "uniques" : 304,
   "clones" : [
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -53,6 +53,13 @@
       "count_minmax": [ 11, 14 ],
       "uniques": 11,
       "uniques_minmax": [ 9, 11 ]
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
