@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -36,6 +36,11 @@
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 14,
       "uniques": 11
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
